[project]
name = "fastapi-to-do-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.122.0",
    "mcp-server-git>=2025.11.25",
    "mcp[cli]>=1.23.0",
    "sqlalchemy>=2.0.44",
    "strands-agents-tools>=0.2.16",
    "strands-agents[gemini]>=1.18.0",
]
